--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,8 +1,12 @@
 .header{
     display:flex;
-    align-items: center;
+    justify-content: center;
     padding: 20px 10px 20px 20px;
-    justify-content: space-between;
-    border-bottom: 1px solid rgba(0,0,0,0.3);
+}
 
+.type-comp {
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 700;
+    color: #f9ff00;
 }
