--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,14 +1,15 @@
 // @import 'fonts';
 @import 'normalize';
-
+@import 'fonts';
+@import 'header';
 body {
      background: url('@img/background11.jpg') 0 0/auto auto no-repeat fixed;   
 }
 * {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Caveat', sans-serif;
   font-weight: 400;
-  font-size: 10rem;
-  color: white;
+  font-size: 1rem;
+  color: gold;
 }
 .container {
   margin: 0 auto;
