--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,18 +2,31 @@
 @import 'normalize';
 @import 'fonts';
 @import 'header';
+@import 'menu';
+@import 'home-page';
 body {
      background: url('@img/background11.jpg') 0 0/auto auto no-repeat fixed;   
 }
 * {
   font-family: 'Caveat', sans-serif;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 62.5%;
   color: gold;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 .container {
   margin: 0 auto;
   width: 1200px;
 }
 
-
+section {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5vw;
+}
