--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'header';
 @import 'menu';
 @import 'home-page';
+@import 'formula';
 body {
      background: url('@img/background11.jpg') 0 0/auto auto no-repeat fixed;   
 }
