--- a/src/scss/home-page.scss
+++ b/src/scss/home-page.scss
@@ -1,4 +1,4 @@
-#home-page {
+.home {
     display: flex;
     flex-direction: column;
 }
@@ -11,6 +11,20 @@
 .page-link { 
     background-color: rgba(255, 255, 255, 0.1);
     margin: 15px;
-    padding: 10px;
-    border-radius: 40%;
+    // padding: 10px;
+    // border-radius: 40%;
+    display: inline-block;
+   
+    text-decoration: none;
+    padding: 15px 30px;
+    border: 3px solid #555;
+    border-radius: 10px;
 }
+
+.page-link:hover {
+    animation: pulsate 1s ease-in-out;
+  }
+  @keyframes pulsate {
+    0% {box-shadow: 0 0 25px #5ddcff, 0 0 50px #4e00c2 }
+  }
+
